--- a/css/style.css
+++ b/css/style.css
@@ -15,4 +15,10 @@
     transform:scale(2);
   }
   
-  
+  .nextShowTitle {
+    padding: 20px;
+  }
+
+  .nextShowBanner {
+    padding-bottom: 10px;
+  }
